exports[`Grid fill renders with value large 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--fill--large">
  <div />
</div>
`;

exports[`Grid fill renders with value medium 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--fill--medium">
  <div />
</div>
`;

exports[`Grid fill renders with value small 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--fill--small">
  <div />
</div>
`;

exports[`Grid fill renders with value true 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--fill">
  <div />
</div>
`;

exports[`Grid fit renders with value large 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--fit--large">
  <div />
</div>
`;

exports[`Grid fit renders with value medium 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--fit--medium">
  <div />
</div>
`;

exports[`Grid fit renders with value small 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--fit--small">
  <div />
</div>
`;

exports[`Grid fit renders with value true 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--fit">
  <div />
</div>
`;

exports[`Grid full renders with value large 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--full--large">
  <div />
</div>
`;

exports[`Grid full renders with value medium 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--full--medium">
  <div />
</div>
`;

exports[`Grid full renders with value small 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--full--small">
  <div />
</div>
`;

exports[`Grid full renders with value true 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--full">
  <div />
</div>
`;

exports[`Grid gutters renders with value false 1`] = `
<div
  className="ax-grid ax-grid--gutters-none">
  <div />
</div>
`;

exports[`Grid gutters renders with value large 1`] = `
<div
  className="ax-grid ax-grid--gutters--large">
  <div />
</div>
`;

exports[`Grid gutters renders with value medium 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium">
  <div />
</div>
`;

exports[`Grid gutters renders with value small 1`] = `
<div
  className="ax-grid ax-grid--gutters--small">
  <div />
</div>
`;

exports[`Grid renders with defaultProps 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium">
  <div />
</div>
`;

exports[`Grid renders with hGutters false 1`] = `
<div
  className="ax-grid ax-grid--gutters-none-h ax-grid--gutters--medium">
  <div />
</div>
`;

exports[`Grid renders with responsive false 1`] = `
<div
  className="ax-grid ax-grid--unresponsive ax-grid--gutters--medium">
  <div />
</div>
`;

exports[`Grid renders with vGutters false 1`] = `
<div
  className="ax-grid ax-grid--gutters-none-v ax-grid--gutters--medium">
  <div />
</div>
`;

exports[`Grid shrink renders with value large 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--shrink--large">
  <div />
</div>
`;

exports[`Grid shrink renders with value medium 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--shrink--medium">
  <div />
</div>
`;

exports[`Grid shrink renders with value small 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--shrink--small">
  <div />
</div>
`;

exports[`Grid shrink renders with value true 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--shrink">
  <div />
</div>
`;

exports[`Grid vAlign renders with value large 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--v-bottom">
  <div />
</div>
`;

exports[`Grid vAlign renders with value medium 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--v-middle">
  <div />
</div>
`;

exports[`Grid vAlign renders with value small 1`] = `
<div
  className="ax-grid ax-grid--gutters--medium ax-grid--v-top">
  <div />
</div>
`;
